[tool.poetry]
name = "pyposts"
version = "0.1.0"
description = "Fetch posts from popular websites directly into your shell"
authors = ["Damian Tabor <tab.damian93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
click = "^7.1.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
