[tool.poetry]
name = "pynews-cli"
version = "0.1.0"
description = "Fetch posts from hackernews directly into your shell"
authors = ["Damian Tabor <tab.damian93@gmail.com>"]
packages = [
	{include = "pynews"}
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
click = "^7.1.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[tool.poetry.scripts]
pynews = "pynews.pynews:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
